--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,7 +4,7 @@ server {
 
   location / {
     root   /usr/share/nginx/html;
-    index  hello.html;
+    index  index.html;
   }
 
   error_page   500 502 503 504  /50x.html;
